change pinout in Cube

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_0
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_6
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=DISABLE
@@ -169,8 +169,8 @@ MxDb.Version=DB.4.0.220
 NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -180,12 +180,16 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
-PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=VBUS_S
-PA0-WKUP.Signal=ADCx_IN0
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=M1_TEMP
-PA1.Signal=ADCx_IN1
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0-WKUP.GPIO_Label=GPIO_1
+PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA1.GPIO_Label=GPIO_2
+PA1.GPIO_PuPd=GPIO_NOPULL
+PA1.Locked=true
+PA1.Signal=GPIO_Input
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=M0_CH
 PA10.Locked=true
@@ -202,26 +206,27 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=M0_ENC_Z
 PA15.Locked=true
 PA15.Signal=GPIO_Input
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=AUX_I
-PA2.Signal=ADCx_IN2
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA2.GPIO_Label=GPIO_3
+PA2.GPIO_PuPd=GPIO_PULLDOWN
+PA2.Locked=true
+PA2.Signal=GPXTI2
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=GPIO_4
-PA3.GPIO_PuPd=GPIO_PULLDOWN
+PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.Locked=true
 PA3.Signal=GPIO_Input
-PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA4.GPIO_Label=GPIO_3
-PA4.GPIO_PuPd=GPIO_PULLDOWN
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=M1_TEMP
 PA4.Locked=true
-PA4.Signal=GPXTI4
-PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA5.GPIO_Label=GPIO_2
-PA5.GPIO_PuPd=GPIO_PULLDOWN
+PA4.Signal=ADCx_IN4
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=AUX_I
 PA5.Locked=true
-PA5.Signal=GPIO_Input
+PA5.Signal=ADCx_IN5
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=AUX_V
+PA6.GPIO_Label=VBUS_S
+PA6.Locked=true
 PA6.Signal=ADCx_IN6
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=M1_AL
@@ -273,11 +278,10 @@ PB15.GPIO_Label=M0_CL
 PB15.Locked=true
 PB15.Mode=PWM Generation3 CH3 CH3N
 PB15.Signal=TIM1_CH3N
-PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB2.GPIO_Label=GPIO_1
-PB2.GPIO_PuPd=GPIO_PULLDOWN
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=GPIO_5
 PB2.Locked=true
-PB2.Signal=GPXTI2
+PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=M1_ENC_Z
 PB3.Locked=true
@@ -429,12 +433,6 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.1=ADC2_IN0,IN0
-SH.ADCx_IN0.ConfNb=2
-SH.ADCx_IN1.0=ADC1_IN1,IN1
-SH.ADCx_IN1.1=ADC2_IN1,IN1
-SH.ADCx_IN1.ConfNb=2
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.1=ADC2_IN10,IN10
 SH.ADCx_IN10.2=ADC3_IN10,IN10
@@ -457,16 +455,19 @@ SH.ADCx_IN14.ConfNb=2
 SH.ADCx_IN15.0=ADC1_IN15,IN15
 SH.ADCx_IN15.1=ADC2_IN15,IN15
 SH.ADCx_IN15.ConfNb=2
-SH.ADCx_IN2.0=ADC1_IN2,IN2
-SH.ADCx_IN2.1=ADC2_IN2,IN2
-SH.ADCx_IN2.ConfNb=2
+SH.ADCx_IN4.0=ADC1_IN4,IN4
+SH.ADCx_IN4.1=ADC2_IN4,IN4
+SH.ADCx_IN4.ConfNb=2
+SH.ADCx_IN5.0=ADC1_IN5,IN5
+SH.ADCx_IN5.1=ADC2_IN5,IN5
+SH.ADCx_IN5.ConfNb=2
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.1=ADC2_IN6,IN6
 SH.ADCx_IN6.ConfNb=2
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
-SH.GPXTI4.0=GPIO_EXTI4
-SH.GPXTI4.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
