--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -92,8 +92,9 @@ Mcu.IP10=TIM2
 Mcu.IP11=TIM3
 Mcu.IP12=TIM4
 Mcu.IP13=TIM8
-Mcu.IP14=USB_DEVICE
-Mcu.IP15=USB_OTG_FS
+Mcu.IP14=UART4
+Mcu.IP15=USB_DEVICE
+Mcu.IP16=USB_OTG_FS
 Mcu.IP2=ADC3
 Mcu.IP3=CAN1
 Mcu.IP4=FREERTOS
@@ -102,7 +103,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SPI3
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -169,8 +170,7 @@ MxDb.Version=DB.4.0.220
 NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -184,12 +184,14 @@ PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=GPIO_1
 PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPXTI0
+PA0-WKUP.Signal=SharedStack_PA0
+PA0-WKUP.Stacked=true
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=GPIO_2
 PA1.GPIO_PuPd=GPIO_NOPULL
 PA1.Locked=true
-PA1.Signal=GPIO_Input
+PA1.Signal=SharedStack_PA1
+PA1.Stacked=true
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=M0_CH
 PA10.Locked=true
@@ -398,7 +400,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_ADC1_Init-ADC1-false-HAL,3-MX_ADC2_Init-ADC2-false-HAL,4-MX_CAN1_Init-CAN1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_TIM3_Init-TIM3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_SPI3_Init-SPI3-false-HAL,10-MX_ADC3_Init-ADC3-false-HAL,11-SystemClock_Config-RCC-false-HAL,12-MX_TIM2_Init-TIM2-false-HAL,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_ADC1_Init-ADC1-false-HAL,3-MX_ADC2_Init-ADC2-false-HAL,4-MX_CAN1_Init-CAN1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_TIM3_Init-TIM3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_SPI3_Init-SPI3-false-HAL,10-MX_ADC3_Init-ADC3-false-HAL,11-SystemClock_Config-RCC-false-HAL,12-MX_TIM2_Init-TIM2-false-HAL,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,14-MX_UART4_Init-UART4-false-HAL
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -464,8 +466,6 @@ SH.ADCx_IN5.ConfNb=2
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.1=ADC2_IN6,IN6
 SH.ADCx_IN6.ConfNb=2
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
@@ -492,6 +492,12 @@ SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM8_CH3.ConfNb=1
+SH.SharedStack_PA0.0=GPIO_EXTI0+0
+SH.SharedStack_PA0.1=UART4_TX,Asynchronous
+SH.SharedStack_PA0.ConfNb=2
+SH.SharedStack_PA1.0=GPIO_Input+0
+SH.SharedStack_PA1.1=UART4_RX,Asynchronous
+SH.SharedStack_PA1.ConfNb=2
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI3.CLKPhase=SPI_PHASE_2EDGE
 SPI3.CalculateBaudRate=2.625 MBits/s
@@ -555,6 +561,8 @@ TIM8.OffStateIDLEMode=TIM_OSSI_ENABLE
 TIM8.OffStateRunMode=TIM_OSSR_ENABLE
 TIM8.Period=TIM_1_8_PERIOD_CLOCKS
 TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+UART4.IPParameters=VirtualMode
+UART4.VirtualMode=Asynchronous
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING-CDC_FS,PRODUCT_STRING_CDC_FS,VID-CDC_FS,PID_CDC_FS,SERIALNUMBER_STRING_CDC_FS
 USB_DEVICE.MANUFACTURER_STRING-CDC_FS=ODrive
