--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -80,6 +80,18 @@ CAN1.BS2=CAN_BS2_1TQ
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,BS2
+Dma.Request0=UART4_RX
+Dma.RequestsNb=1
+Dma.UART4_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART4_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_RX.0.Instance=DMA1_Stream2
+Dma.UART4_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART4_RX.0.Mode=DMA_CIRCULAR
+Dma.UART4_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.UART4_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil
 FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default
@@ -88,22 +100,23 @@ KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM2
-Mcu.IP11=TIM3
-Mcu.IP12=TIM4
-Mcu.IP13=TIM8
-Mcu.IP14=UART4
-Mcu.IP15=USB_DEVICE
-Mcu.IP16=USB_OTG_FS
+Mcu.IP10=TIM1
+Mcu.IP11=TIM2
+Mcu.IP12=TIM3
+Mcu.IP13=TIM4
+Mcu.IP14=TIM8
+Mcu.IP15=UART4
+Mcu.IP16=USB_DEVICE
+Mcu.IP17=USB_OTG_FS
 Mcu.IP2=ADC3
 Mcu.IP3=CAN1
-Mcu.IP4=FREERTOS
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SPI3
-Mcu.IP8=SYS
-Mcu.IP9=TIM1
-Mcu.IPNb=17
+Mcu.IP4=DMA
+Mcu.IP5=FREERTOS
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SPI3
+Mcu.IP9=SYS
+Mcu.IPNb=18
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -169,6 +182,7 @@ MxCube.Version=4.22.0
 MxDb.Version=DB.4.0.220
 NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -400,7 +414,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_ADC1_Init-ADC1-false-HAL,3-MX_ADC2_Init-ADC2-false-HAL,4-MX_CAN1_Init-CAN1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_TIM3_Init-TIM3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_SPI3_Init-SPI3-false-HAL,10-MX_ADC3_Init-ADC3-false-HAL,11-SystemClock_Config-RCC-false-HAL,12-MX_TIM2_Init-TIM2-false-HAL,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,14-MX_UART4_Init-UART4-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-MX_ADC1_Init-ADC1-false-HAL,4-MX_ADC2_Init-ADC2-false-HAL,5-MX_CAN1_Init-CAN1-false-HAL,6-MX_TIM1_Init-TIM1-false-HAL,7-MX_TIM8_Init-TIM8-false-HAL,8-MX_TIM3_Init-TIM3-false-HAL,9-MX_TIM4_Init-TIM4-false-HAL,10-MX_SPI3_Init-SPI3-false-HAL,11-MX_ADC3_Init-ADC3-false-HAL,12-SystemClock_Config-RCC-false-HAL,13-MX_TIM2_Init-TIM2-false-HAL,14-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,15-MX_UART4_Init-UART4-false-HAL
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
