upgrade Cube version

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -178,22 +178,22 @@ Mcu.Pin9=PA0-WKUP
 Mcu.PinsNb=56
 Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,10192;TIM_1_8_DEADTIME_CLOCKS,20;TIM_APB1_CLOCK_HZ,84000000;TIM_APB1_PERIOD_CLOCKS,4096;TIM_APB1_DEADTIME_CLOCKS,40
 Mcu.UserName=STM32F405RGTx
-MxCube.Version=4.22.0
-MxDb.Version=DB.4.0.220
-NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:false\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true
+MxCube.Version=4.22.1
+MxDb.Version=DB.4.0.221
+NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=GPIO_1
 PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
