Turn on uart TX DMA

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -81,7 +81,8 @@ CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,BS2
 Dma.Request0=UART4_RX
-Dma.RequestsNb=1
+Dma.Request1=UART4_TX
+Dma.RequestsNb=2
 Dma.UART4_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.UART4_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.UART4_RX.0.Instance=DMA1_Stream2
@@ -92,6 +93,16 @@ Dma.UART4_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.UART4_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.UART4_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.UART4_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART4_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_TX.1.Instance=DMA1_Stream4
+Dma.UART4_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART4_TX.1.Mode=DMA_NORMAL
+Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil
 FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default
@@ -183,6 +194,7 @@ MxDb.Version=DB.4.0.221
 NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
