--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -592,11 +592,13 @@ TIM8.Period=TIM_1_8_PERIOD_CLOCKS
 TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
+USB_DEVICE.APP_RX_DATA_SIZE-CDC_FS=64
+USB_DEVICE.APP_TX_DATA_SIZE-CDC_FS=64
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING-CDC_FS,PRODUCT_STRING_CDC_FS,VID-CDC_FS,PID_CDC_FS,SERIALNUMBER_STRING_CDC_FS
-USB_DEVICE.MANUFACTURER_STRING-CDC_FS=ODrive
-USB_DEVICE.PID_CDC_FS=0x0D31
-USB_DEVICE.PRODUCT_STRING_CDC_FS=ODrive rev 3.1
+USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING-CDC_FS,PRODUCT_STRING_CDC_FS,VID-CDC_FS,PID_CDC_FS,SERIALNUMBER_STRING_CDC_FS,APP_RX_DATA_SIZE-CDC_FS,APP_TX_DATA_SIZE-CDC_FS
+USB_DEVICE.MANUFACTURER_STRING-CDC_FS=ODrive Robotics
+USB_DEVICE.PID_CDC_FS=0x0D33
+USB_DEVICE.PRODUCT_STRING_CDC_FS=ODrive rev 3.3
 USB_DEVICE.SERIALNUMBER_STRING_CDC_FS=000000000001
 USB_DEVICE.VID-CDC_FS=0x1209
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
