Add 500kbit CAN-interface IRQ handlers

--- a/Firmware/Odrive.ioc
+++ b/Firmware/Odrive.ioc
@@ -75,11 +75,13 @@ ADC3.Resolution=ADC_RESOLUTION_12B
 ADC3.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC3.SamplingTime-8\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC3.ScanConvMode=DISABLE
-CAN1.BS1=CAN_BS1_1TQ
-CAN1.BS2=CAN_BS2_1TQ
-CAN1.CalculateTimeBit=1142
-CAN1.CalculateTimeQuantum=380.95238095238096
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,BS2
+CAN1.AWUM=ENABLE
+CAN1.BS1=CAN_BS1_6TQ
+CAN1.BS2=CAN_BS2_5TQ
+CAN1.CalculateTimeBit=2000
+CAN1.CalculateTimeQuantum=166.66666666666669
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,Prescaler,BS2,AWUM
+CAN1.Prescaler=7
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil
 FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default
@@ -166,20 +168,22 @@ Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,10192;TIM_1_8
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.22.0
 MxDb.Version=DB.4.0.220
-NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true
+NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.CAN1_TX_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=GPIO_1
 PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
@@ -374,7 +378,7 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
