--- a/Firmware/Odrive.ioc
+++ b/Firmware/Odrive.ioc
@@ -187,7 +187,6 @@ Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
 Mcu.PinsNb=56
-Mcu.ThirdPartyNb=0
 Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,10192;TIM_1_8_DEADTIME_CLOCKS,20;TIM_APB1_CLOCK_HZ,84000000;TIM_APB1_PERIOD_CLOCKS,4096;TIM_APB1_DEADTIME_CLOCKS,40
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.22.1
@@ -197,6 +196,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -238,11 +238,11 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=M0_ENC_Z
 PA15.Locked=true
 PA15.Signal=GPIO_Input
-PA2.GPIOParameters=PinState,GPIO_Label
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA2.GPIO_Label=GPIO_3
+PA2.GPIO_PuPd=GPIO_PULLDOWN
 PA2.Locked=true
-PA2.PinState=GPIO_PIN_SET
-PA2.Signal=GPIO_Output
+PA2.Signal=GPXTI2
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=GPIO_4
 PA3.GPIO_PuPd=GPIO_NOPULL
@@ -430,7 +430,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM8_Init-TIM8-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_SPI3_Init-SPI3-false-HAL-true,11-MX_ADC3_Init-ADC3-false-HAL-true,12-SystemClock_Config-RCC-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,15-MX_UART4_Init-UART4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-MX_ADC1_Init-ADC1-false-HAL,4-MX_ADC2_Init-ADC2-false-HAL,5-MX_CAN1_Init-CAN1-false-HAL,6-MX_TIM1_Init-TIM1-false-HAL,7-MX_TIM8_Init-TIM8-false-HAL,8-MX_TIM3_Init-TIM3-false-HAL,9-MX_TIM4_Init-TIM4-false-HAL,10-MX_SPI3_Init-SPI3-false-HAL,11-MX_ADC3_Init-ADC3-false-HAL,12-SystemClock_Config-RCC-false-HAL,13-MX_TIM2_Init-TIM2-false-HAL,14-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,15-MX_UART4_Init-UART4-false-HAL
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -496,6 +496,8 @@ SH.ADCx_IN5.ConfNb=2
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.1=ADC2_IN6,IN6
 SH.ADCx_IN6.ConfNb=2
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
