register FreeRTOS heap change in CubeMX
When we changed the FreeRTOS heap to reside in the CCM,
we didn't update the CubeMX settings. This means CubeMX
would revert the change.

This commit fixes this.

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -101,9 +101,11 @@ Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.UART4_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,FootprintOK
 FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default
+FREERTOS.configTOTAL_HEAP_SIZE=65536
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
@@ -186,7 +188,7 @@ Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
 Mcu.PinsNb=56
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,10192;TIM_1_8_DEADTIME_CLOCKS,20;TIM_APB1_CLOCK_HZ,84000000;TIM_APB1_PERIOD_CLOCKS,4096;TIM_APB1_DEADTIME_CLOCKS,40
+Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,10192;TIM_1_8_DEADTIME_CLOCKS,20;TIM_APB1_CLOCK_HZ,84000000;TIM_APB1_PERIOD_CLOCKS,4096;TIM_APB1_DEADTIME_CLOCKS,40;configAPPLICATION_ALLOCATED_HEAP,1
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.24.0
 MxDb.Version=DB.4.0.240
