change pin names and modes in Cube

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -238,7 +238,7 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.GPIOParameters=GPIO_Label
-PA15.GPIO_Label=M0_ENC_Z
+PA15.GPIO_Label=GPIO_7
 PA15.Locked=true
 PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -256,7 +256,7 @@ PA4.GPIO_Label=M1_TEMP
 PA4.Locked=true
 PA4.Signal=ADCx_IN4
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=AUX_I
+PA5.GPIO_Label=AUX_TEMP
 PA5.Locked=true
 PA5.Signal=ADCx_IN5
 PA6.GPIOParameters=GPIO_Label
@@ -314,11 +314,11 @@ PB15.Locked=true
 PB15.Mode=PWM Generation3 CH3 CH3N
 PB15.Signal=TIM1_CH3N
 PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=GPIO_5
+PB2.GPIO_Label=GPIO_6
 PB2.Locked=true
 PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=M1_ENC_Z
+PB3.GPIO_Label=GPIO_8
 PB3.Locked=true
 PB3.Signal=GPIO_Input
 PB4.GPIOParameters=GPIO_Label
@@ -360,9 +360,9 @@ PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.PinState=GPIO_PIN_SET
 PC14-OSC32_IN.Signal=GPIO_Output
 PC15-OSC32_OUT.GPIOParameters=GPIO_Label
-PC15-OSC32_OUT.GPIO_Label=M1_DC_CAL
+PC15-OSC32_OUT.GPIO_Label=M1_ENC_Z
 PC15-OSC32_OUT.Locked=true
-PC15-OSC32_OUT.Signal=GPIO_Output
+PC15-OSC32_OUT.Signal=GPIO_Input
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=M1_IC
 PC2.Signal=ADCx_IN12
@@ -370,8 +370,9 @@ PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=M1_IB
 PC3.Signal=ADCx_IN13
 PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=AUX_TEMP
-PC4.Signal=ADCx_IN14
+PC4.GPIO_Label=GPIO_5
+PC4.Locked=true
+PC4.Signal=GPIO_Input
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=M0_TEMP
 PC5.Signal=ADCx_IN15
@@ -388,9 +389,9 @@ PC8.GPIO_Label=M1_CH
 PC8.Locked=true
 PC8.Signal=S_TIM8_CH3
 PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=M0_DC_CAL
+PC9.GPIO_Label=M0_ENC_Z
 PC9.Locked=true
-PC9.Signal=GPIO_Output
+PC9.Signal=GPIO_Input
 PCC.Checker=false
 PCC.Line=STM32F405/415
 PCC.MCU=STM32F405RGTx
@@ -484,9 +485,6 @@ SH.ADCx_IN13.0=ADC1_IN13,IN13
 SH.ADCx_IN13.1=ADC2_IN13,IN13
 SH.ADCx_IN13.2=ADC3_IN13,IN13
 SH.ADCx_IN13.ConfNb=3
-SH.ADCx_IN14.0=ADC1_IN14,IN14
-SH.ADCx_IN14.1=ADC2_IN14,IN14
-SH.ADCx_IN14.ConfNb=2
 SH.ADCx_IN15.0=ADC1_IN15,IN15
 SH.ADCx_IN15.1=ADC2_IN15,IN15
 SH.ADCx_IN15.ConfNb=2
