[CubeMX] enable CAN1 interrupts

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -196,6 +196,10 @@ MxCube.Version=4.24.0
 MxDb.Version=DB.4.0.240
 NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.CAN1_RX0_IRQn=true\:6\:0\:true\:false\:true\:true\:true
+NVIC.CAN1_RX1_IRQn=true\:6\:0\:true\:false\:true\:true\:true
+NVIC.CAN1_SCE_IRQn=true\:6\:0\:true\:false\:true\:true\:true
+NVIC.CAN1_TX_IRQn=true\:6\:0\:true\:false\:true\:true\:true
 NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
