GPIO_3 input by default and EXTI2 disabled by default

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -199,7 +199,6 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -241,11 +240,10 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=GPIO_7
 PA15.Locked=true
 PA15.Signal=GPIO_Input
-PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=GPIO_3
-PA2.GPIO_PuPd=GPIO_PULLDOWN
 PA2.Locked=true
-PA2.Signal=GPXTI2
+PA2.Signal=GPIO_Input
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=GPIO_4
 PA3.GPIO_PuPd=GPIO_NOPULL
@@ -497,8 +495,6 @@ SH.ADCx_IN5.ConfNb=2
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.1=ADC2_IN6,IN6
 SH.ADCx_IN6.ConfNb=2
-SH.GPXTI2.0=GPIO_EXTI2
-SH.GPXTI2.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
