--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -126,13 +126,12 @@ Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataA
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=1
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,FootprintOK,configCHECK_FOR_STACK_OVERFLOW,INCLUDE_uxTaskGetStackHighWaterMark
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,FootprintOK,configCHECK_FOR_STACK_OVERFLOW,INCLUDE_uxTaskGetStackHighWaterMark,configUSE_IDLE_HOOK
 FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=1
 FREERTOS.configTOTAL_HEAP_SIZE=65536
+FREERTOS.configUSE_IDLE_HOOK=1
 File.Version=6
-I2C1.IPParameters=OwnAddress
-I2C1.OwnAddress=12
 KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
@@ -145,7 +144,6 @@ Mcu.IP14=TIM8
 Mcu.IP15=UART4
 Mcu.IP16=USB_DEVICE
 Mcu.IP17=USB_OTG_FS
-Mcu.IP18=I2C1
 Mcu.IP2=ADC3
 Mcu.IP3=CAN1
 Mcu.IP4=DMA
@@ -227,8 +225,6 @@ NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true
-NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true
