implement CAN node ID configuration algorithm (not tested yet)

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -75,9 +75,13 @@ ADC3.Resolution=ADC_RESOLUTION_12B
 ADC3.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC3.SamplingTime-8\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC3.ScanConvMode=DISABLE
-CAN1.CalculateTimeBit=1142
-CAN1.CalculateTimeQuantum=380.95238095238096
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit
+CAN1.AutoWakeUp=ENABLE
+CAN1.CalculateTimeBit=2000
+CAN1.CalculateTimeQuantum=166.66666666666669
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,Prescaler,TimeSeg1,TimeSeg2,AutoWakeUp
+CAN1.Prescaler=7
+CAN1.TimeSeg1=CAN_BS1_6TQ
+CAN1.TimeSeg2=CAN_BS2_5TQ
 Dma.Request0=UART4_RX
 Dma.Request1=UART4_TX
 Dma.RequestsNb=2
