add TIM5 irq, and custom decoder and callback dispatcher

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -209,6 +209,7 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
+NVIC.TIM5_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
 NVIC.TimeBaseIP=TIM14
@@ -583,7 +584,9 @@ TIM5.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM5.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM5.ICFilter_CH3=15
 TIM5.ICFilter_CH4=15
-TIM5.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,ICFilter_CH3,ICFilter_CH4
+TIM5.ICPolarity_CH3=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
+TIM5.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
+TIM5.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,ICFilter_CH3,ICFilter_CH4,ICPolarity_CH3,ICPolarity_CH4
 TIM8.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM8.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
