set tim5 period to max 32bit

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -586,7 +586,8 @@ TIM5.ICFilter_CH3=15
 TIM5.ICFilter_CH4=15
 TIM5.ICPolarity_CH3=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
 TIM5.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
-TIM5.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,ICFilter_CH3,ICFilter_CH4,ICPolarity_CH3,ICPolarity_CH4
+TIM5.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,ICFilter_CH3,ICFilter_CH4,ICPolarity_CH3,ICPolarity_CH4,Period
+TIM5.Period=0xFFFFFFFF
 TIM8.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM8.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
