configuring GPIO pins

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -263,15 +263,25 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=GPIO_7
 PA15.Locked=true
 PA15.Signal=GPIO_Input
-PA2.GPIOParameters=GPIO_Label
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA2.GPIO_Label=GPIO_3
+PA2.GPIO_PuPd=GPIO_PULLDOWN
 PA2.Locked=true
-PA2.Signal=GPIO_Input
+PA2.Signal=GPXTI2
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=GPIO_4
-PA3.GPIO_PuPd=GPIO_NOPULL
+PA3.GPIO_PuPd=GPIO_PULLDOWN
 PA3.Locked=true
-PA3.Signal=GPIO_Input
+PA3.Signal=GPXTI3
+#PA2.GPIOParameters=GPIO_Label
+#PA2.GPIO_Label=GPIO_3
+#PA2.Locked=true
+#PA2.Signal=GPIO_Input
+#PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
+#PA3.GPIO_Label=GPIO_4
+#PA3.GPIO_PuPd=GPIO_NOPULL
+#PA3.Locked=true
+#PA3.Signal=GPIO_Input
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=M1_TEMP
 PA4.Locked=true
