Run STM32CubeMX v1.21

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -76,9 +76,11 @@ ADC3.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC3.SamplingTime-8\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC3.ScanConvMode=DISABLE
 CAN1.AutoWakeUp=ENABLE
+CAN1.BS1=CAN_BS1_6TQ
+CAN1.BS2=CAN_BS2_5TQ
 CAN1.CalculateTimeBit=500
 CAN1.CalculateTimeQuantum=166.66666666666669
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,Prescaler,TimeSeg1,TimeSeg2,AutoWakeUp
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,Prescaler,TimeSeg1,TimeSeg2,AutoWakeUp,BS1,BS2
 CAN1.Prescaler=7
 CAN1.TimeSeg1=CAN_BS1_6TQ
 CAN1.TimeSeg2=CAN_BS2_5TQ
@@ -209,8 +211,8 @@ Mcu.PinsNb=56
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,3500;TIM_1_8_DEADTIME_CLOCKS,20;TIM_APB1_CLOCK_HZ,84000000;TIM_APB1_PERIOD_CLOCKS,4096;TIM_APB1_DEADTIME_CLOCKS,40;configAPPLICATION_ALLOCATED_HEAP,1;TIM_1_8_RCR,2
 Mcu.UserName=STM32F405RGTx
-MxCube.Version=4.24.0
-MxDb.Version=DB.4.0.240
+MxCube.Version=4.27.0
+MxDb.Version=DB.4.0.270
 NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.CAN1_RX0_IRQn=true\:6\:0\:true\:false\:true\:true\:true
@@ -443,7 +445,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F405RGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.19.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.21.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x3C00
