--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -137,9 +137,10 @@ Mcu.IP12=TIM3
 Mcu.IP13=TIM4
 Mcu.IP14=TIM5
 Mcu.IP15=TIM8
-Mcu.IP16=UART4
-Mcu.IP17=USB_DEVICE
-Mcu.IP18=USB_OTG_FS
+Mcu.IP16=TIM13
+Mcu.IP17=UART4
+Mcu.IP18=USB_DEVICE
+Mcu.IP19=USB_OTG_FS
 Mcu.IP2=ADC3
 Mcu.IP3=CAN1
 Mcu.IP4=DMA
@@ -148,7 +149,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SPI3
 Mcu.IP9=SYS
-Mcu.IPNb=19
+Mcu.IPNb=20
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -202,12 +203,13 @@ Mcu.Pin51=VP_FREERTOS_VS_ENABLE
 Mcu.Pin52=VP_SYS_VS_tim14
 Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin54=VP_TIM1_VS_no_output4
-Mcu.Pin55=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin55=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin56=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=56
+Mcu.PinsNb=57
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,3500;TIM_1_8_DEADTIME_CLOCKS,20;TIM_APB1_CLOCK_HZ,84000000;TIM_APB1_PERIOD_CLOCKS,4096;TIM_APB1_DEADTIME_CLOCKS,40;configAPPLICATION_ALLOCATED_HEAP,1;TIM_1_8_RCR,2
 Mcu.UserName=STM32F405RGTx
@@ -462,7 +464,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM8_Init-TIM8-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_SPI3_Init-SPI3-false-HAL-true,11-MX_ADC3_Init-ADC3-false-HAL-true,12-SystemClock_Config-RCC-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,15-MX_UART4_Init-UART4-false-HAL-true,16-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM8_Init-TIM8-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_SPI3_Init-SPI3-false-HAL-true,11-MX_ADC3_Init-ADC3-false-HAL-true,12-SystemClock_Config-RCC-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,15-MX_UART4_Init-UART4-false-HAL-true,16-MX_TIM5_Init-TIM5-false-HAL-true,17-MX_TIM13_Init-TIM13-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -592,6 +594,8 @@ TIM1.OffStateRunMode=TIM_OSSR_ENABLE
 TIM1.Period=TIM_1_8_PERIOD_CLOCKS
 TIM1.RepetitionCounter=TIM_1_8_RCR
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM13.IPParameters=Period
+TIM13.Period=(2 * TIM_1_8_PERIOD_CLOCKS * (TIM_1_8_RCR+1) * TIM_APB1_CLOCK_HZ) / TIM_1_8_CLOCK_HZ
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
@@ -658,6 +662,8 @@ VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_SYS_VS_tim14.Mode=TIM14
 VP_SYS_VS_tim14.Signal=SYS_VS_tim14
+VP_TIM13_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM13_VS_ClockSourceINT.Signal=TIM13_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM1_VS_no_output4.Mode=Output Compare4 No Output
