fix integer overflow in TIM expression

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -595,7 +595,7 @@ TIM1.Period=TIM_1_8_PERIOD_CLOCKS
 TIM1.RepetitionCounter=TIM_1_8_RCR
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM13.IPParameters=Period
-TIM13.Period=(2 * TIM_1_8_PERIOD_CLOCKS * (TIM_1_8_RCR+1) * TIM_APB1_CLOCK_HZ) / TIM_1_8_CLOCK_HZ
+TIM13.Period=(2 * TIM_1_8_PERIOD_CLOCKS * (TIM_1_8_RCR+1)) * (TIM_APB1_CLOCK_HZ / TIM_1_8_CLOCK_HZ)
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
